--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,10 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --bg-color-light: white;
+    --text-color-light: black;
+    --bg-color-dark: black;
+    --text-color-dark: white;
   }
 
   .dark {
@@ -57,6 +61,16 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+}
+
+body {
+  background-color: var(--bg-color-light);
+  color: var(--text-color-light);
+}
+
+body.dark {
+  background-color: var(--bg-color-dark);
+  color: var(--text-color-dark);
 }
 
 @layer base {
