--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,7 @@ body.dark {
   }
 }
 
+
 ::-webkit-scrollbar {
   width: 15px;
 }
@@ -127,4 +128,29 @@ body.dark {
 .dark .gradient-background-dark {
   background-size: 180% 180%;
   animation: gradient-animation 5s ease infinite;
+}
+
+
+.os-scrollbar {
+  width: 15px;
+}
+
+.os-scrollbar-track {
+  background: #CCC;
+}
+
+.os-scrollbar-handle {
+  background-color: #0077cc;
+  border-radius: 10px;
+  border: 3px solid #CCC;
+}
+
+.os-dark .os-scrollbar-track {
+  background: #1F252E;
+}
+
+.os-dark .os-scrollbar-handle {
+  background-color: #1b3a6b;
+  border-radius: 10px;
+  border: 3px solid #1F252E;
 }
